<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoggerDevel</string>
    <string name="action_settings">Settings</string>

    <string name="txtview_1">Exercise the \'L\' logger class</string>

    <string name="btn1lbl">Log E,W,I,D,V</string>
    <string name="btn2lbl">Log Dbg</string>
    <string name="btn3lbl">Log Dbg</string>
    <string name="btn4lbl">Clear</string>

</resources>
